--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,19 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
-        "targets": ["last 3 versions"],
+        "targets": [
+          "last 3 versions"
+        ],
         "modules": false
       }
     ]
   ],
-  "plugins": ["external-helpers"]
+  "plugins": [
+    "@babel/plugin-transform-regenerator",
+    "@babel/plugin-transform-spread",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-external-helpers"
+  ]
 }
