--- a/package.json
+++ b/package.json
@@ -2,19 +2,33 @@
   "name": "daub",
   "version": "0.1.0",
   "description": "Syntax highlighting in the browser.",
-  "main": "dist/daub.js",
-  "module": "dist/daub.es.js",
-  "dependencies": {},
+  "main": "lib/daub.js",
+  "module": "src/daub.js",
+  "dependencies": {
+    "babel-plugin-prismjs": "^1.1.1",
+    "becke-ch--regex--s0-0-v1--base--pl--lib": "^1.4.0",
+    "core-js": "^3.2.1",
+    "prismjs": "^1.17.1",
+    "regenerator-runtime": "^0.13.3",
+    "xregexp": "^4.2.4"
+  },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-regenerator": "^7.4.5",
+    "@babel/plugin-transform-spread": "^7.2.2",
+    "@babel/preset-env": "^7.0.0",
+    "babel-eslint": "^10.0.2",
     "eslint": "^4.10.0",
-    "rollup": "^0.50.0",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.5",
-    "rollup-plugin-strip": "^1.1.1",
-    "rollup-plugin-uglify": "^2.0.1",
+    "eslint-plugin-unicorn": "^10.0.0",
+    "rollup": "^1.20.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-strip": "^1.2.2",
+    "rollup-plugin-uglify": "^6.0.2",
     "rollup-plugin-uglify-es": "0.0.1"
   },
   "scripts": {
