--- a/package.json
+++ b/package.json
@@ -2,28 +2,26 @@
   "name": "daub",
   "version": "0.1.0",
   "description": "Syntax highlighting in the browser.",
-  "main": "lib/daub.js",
-  "module": "src/daub.js",
+  "main": "dist/daub.js",
+  "module": "dist/daub.es6.js",
+  "browser": "dist/daub.umd.js",
   "dependencies": {
     "babel-plugin-prismjs": "^1.1.1",
-    "becke-ch--regex--s0-0-v1--base--pl--lib": "^1.4.0",
     "core-js": "^3.2.1",
-    "prismjs": "^1.17.1",
-    "regenerator-runtime": "^0.13.3",
-    "xregexp": "^4.2.4"
+    "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-external-helpers": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/plugin-transform-regenerator": "^7.4.5",
     "@babel/plugin-transform-spread": "^7.2.2",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.5.5",
     "babel-eslint": "^10.0.2",
     "eslint": "^4.10.0",
     "eslint-plugin-unicorn": "^10.0.0",
-    "rollup": "^1.20.2",
+    "rollup": "^1.20.3",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-node-resolve": "^5.2.0",
@@ -33,7 +31,8 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -cw"
+    "build:esm": "babel ./src --out-dir ./dist/esm",
+    "dev": "rollup -w -c rollup.config.new.js"
   },
   "author": "Andrew Dupont",
   "license": "MIT"
