--- a/.babelrc
+++ b/.babelrc
@@ -5,8 +5,7 @@
       {
         "targets": "> 1%, not dead, not ie<12",
         "useBuiltIns": "entry",
-        "corejs": 3,
-        "debug": true
+        "corejs": 3
       }
     ]
   ],
