--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "build:esm": "babel ./src --out-dir ./dist/esm",
-    "dev": "rollup -w -c rollup.config.new.js"
+    "dev": "rollup -w -c rollup.config.js"
   },
   "author": "Andrew Dupont",
   "license": "MIT"
