--- a/package.json
+++ b/package.json
@@ -16,17 +16,15 @@
     "@babel/plugin-transform-regenerator": "^7.4.5",
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-env": "^7.5.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-strip": "^2.1.0",
     "babel-eslint": "^10.0.2",
-    "eslint": "^4.18.2",
+    "eslint": "^8.7.0",
     "eslint-plugin-unicorn": "^10.0.0",
-    "rollup": "^1.20.3",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.0.2",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-strip": "^1.2.2",
-    "rollup-plugin-terser": "^5.1.1",
-    "rollup-plugin-uglify": "^6.0.2",
-    "rollup-plugin-uglify-es": "0.0.1"
+    "rollup": "^2.66.1",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "scripts": {
     "build": "rollup -c",
