--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,9 @@
     [
       "@babel/preset-env",
       {
-        "targets": "> 1%, not dead, not ie<12",
         "useBuiltIns": "entry",
-        "corejs": 3
+        "corejs": 3,
+        "modules": false
       }
     ]
   ],
