--- a/package.json
+++ b/package.json
@@ -1,12 +1,32 @@
 {
   "name": "daub",
   "version": "0.1.0",
+  "type": "module",
   "description": "Syntax highlighting in the browser.",
-  "main": "dist/daub.cjs.js",
+  "main": "dist/daub.cjs.cjs",
   "module": "dist/daub.esm.js",
-  "browser": "dist/daub.umd.js",
+  "browser": "dist/daub.umd.cjs",
   "dependencies": {
     "core-js": "^3.2.1"
+  },
+  "exports": {
+    ".": "./src/daub.js",
+    "./cjs": "./dist/daub.cjs.cjs",
+    "./umd": "./dist/daub.umd.cjs",
+    "./worker": "./dist/daub.worker.umd.cjs",
+    "./all": "./src/all.js",
+    "./grammars/*": "./src/grammars/*.js",
+    "./grammars/*.js": "./src/grammars/*.js",
+    "./plugins/*": "./src/plugins/*.js",
+    "./plugins/*.js": "./src/plugins/*.js"
+  },
+  "imports": {
+    "#internal/*": "./src/*.js",
+    "#internal/grammars/*": "./src/grammars/*.js",
+    "#internal/plugins/*": "./src/plugins/*.js"
+  },
+  "engines": {
+    "node": ">= 17.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -16,20 +36,24 @@
     "@babel/plugin-transform-regenerator": "^7.4.5",
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-env": "^7.5.5",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-strip": "^2.1.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-strip": "^3.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
     "babel-eslint": "^10.0.2",
     "eslint": "^8.7.0",
     "eslint-plugin-unicorn": "^10.0.0",
-    "rollup": "^2.66.1",
+    "rollup": "^3.12.0",
     "rollup-plugin-terser": "^7.0.2"
   },
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -w -c rollup.config.js"
+    "dev": "rollup -w -c rollup.config.js --bundleConfigAsCjs"
   },
   "author": "Andrew Dupont",
-  "license": "MIT"
+  "license": "MIT",
+  "volta": {
+    "node": "18.13.0"
+  }
 }
