--- a/package.json
+++ b/package.json
@@ -6,18 +6,16 @@
   "main": "dist/daub.umd.cjs",
   "module": "src/all.js",
   "browser": "dist/daub.umd.cjs",
-  "dependencies": {
-  },
   "exports": {
-    ".": "./src/daub.js",
+    ".": "./lib/daub.js",
     "./cjs": "./dist/daub.cjs.cjs",
     "./umd": "./dist/daub.umd.cjs",
     "./umd/worker": "./dist/daub.worker.umd.cjs",
-    "./all": "./src/all.js",
-    "./grammars/*": "./src/grammars/*.js",
-    "./grammars/*.js": "./src/grammars/*.js",
-    "./plugins/*": "./src/plugins/*.js",
-    "./plugins/*.js": "./src/plugins/*.js"
+    "./all": "./lib/all.js",
+    "./grammars/*": "./lib/grammars/*.js",
+    "./grammars/*.js": "./lib/grammars/*.js",
+    "./plugins/*": "./lib/plugins/*.js",
+    "./plugins/*.js": "./lib/plugins/*.js"
   },
   "imports": {
     "#internal/*": "./src/*.js",
@@ -45,6 +43,7 @@
     "eslint": "^8.7.0",
     "eslint-plugin-unicorn": "^10.0.0",
     "express": "^4.18.2",
+    "glob": "^8.1.0",
     "jasmine": "^4.5.0",
     "jest": "^29.4.1",
     "jsdom": "^21.1.0",
@@ -52,7 +51,7 @@
     "rollup": "^3.12.0"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c rollup.config.js --bundleConfigAsCjs",
     "dev": "rollup -w -c rollup.config.js --bundleConfigAsCjs",
     "test": "jasmine --config=jasmine.json",
     "test:server": "node ./test/server.js",
